--- a/service/templates/exercise.html
+++ b/service/templates/exercise.html
@@ -10,5 +10,9 @@
 
 
 {% block extra_js_bottom %}
-
+<script type="text/javascript">
+jQuery(document).ready(function($) {
+    octopus.service.bootExerciseForm()
+})
+</script>
 {% endblock%}
