--- a/service/templates/_exercise_form.html
+++ b/service/templates/_exercise_form.html
@@ -1,12 +1,12 @@
-<form id="exercise-form">
+<form id="exercise-form" data-parsley-ui-enabled="false">
     <div class="row">
 
         <div class="col-md-6">
             <div class="form-horizontal">
-                <div class="form-group">
-                    <label for="name" class="col-sm-4 control-label">Exercise Name</label>
+                <div class="form-group validation-container">
+                    <label for="name" class="col-sm-4 control-label">Exercise Name&nbsp;<span class="required">*</span></label>
                     <div class="col-sm-8">
-                        <input type="text" class="form-control" name="name" id="name" placeholder="Exercise Name">
+                        <input type="text" class="form-control" name="name" id="name" placeholder="Exercise Name" data-parsley-required="true">
                     </div>
                 </div>
                 <div id="aka_list">
@@ -25,26 +25,26 @@
                         </div>
                     </div>
                 </div>
-                <div class="form-group">
-                    <label for="description" class="col-sm-4 control-label">Description</label>
+                <div class="form-group validation-container">
+                    <label for="description" class="col-sm-4 control-label">Description&nbsp;<span class="required">*</span></label>
                     <div class="col-sm-8">
-                        <textarea name="description" id="description" class="form-control" rows="10" placeholder="Description"></textarea>
+                        <textarea name="description" id="description" class="form-control" rows="10" placeholder="Description" data-parsley-required="true"></textarea>
                     </div>
                 </div>
-                <div class="form-group">
-                    <label for="classes" class="col-sm-4 control-label">Exercise Type(s)</label>
+                <div class="form-group validation-container">
+                    <label for="classes" class="col-sm-4 control-label">Exercise Type(s)&nbsp;<span class="required">*</span></label>
                     <div class="col-sm-8">
-                        <select name="classes" id="classes" class="form-control" multiple>
+                        <select name="classes" id="classes" class="form-control" multiple data-parsley-required="true">
                             <option value="cardio">Cardio</option>
                             <option value="weights">Weights</option>
                             <option value="bodyweight">Bodyweight</option>
                         </select>
                     </div>
                 </div>
-                <div class="form-group">
-                    <label for="muscles" class="col-sm-4 control-label">Muscles Used</label>
+                <div class="form-group validation-container">
+                    <label for="muscles" class="col-sm-4 control-label">Muscle(s) Used&nbsp;<span class="required">*</span></label>
                     <div class="col-sm-8">
-                        <select name="muscles" id="muscles" class="form-control" multiple>
+                        <select name="muscles" id="muscles" class="form-control" multiple data-parsley-required="true">
                             <option value="biceps">Biceps</option>
                             <option value="triceps">Triceps</option>
                             <option value="upper_abs">Upper Abdominals</option>
@@ -175,5 +175,10 @@
 
     </div>
 
-    <div class="row"><div class="col-md-offset-6 col-md-1" style="padding-top: 20px; padding-bottom: 20px"><button class="btn btn-success" id="save">Save&nbsp;<span class="glyphicon glyphicon-save"></span></button></div></div>
+    <div class="row">
+        <div class="col-md-offset-6 col-md-1" style="padding-top: 20px; padding-bottom: 20px">
+            <button class="btn btn-success" id="save">Save&nbsp;<span class="glyphicon glyphicon-save"></span></button>
+        </div>
+        <div class="col-md-5" style="padding-top: 20px; padding-bottom: 20px"><span id="last-saved">Not yet saved</span></div>
+    </div>
 </form>
