--- a/service/templates/exercise.html
+++ b/service/templates/exercise.html
@@ -4,7 +4,7 @@
 
 <h1>Define an Exercise</h1>
 
-{% include "_exercise_form.html" %}
+<div id="exercise-form-container"></div>
 
 {% endblock %}
 
@@ -12,7 +12,17 @@
 {% block extra_js_bottom %}
 <script type="text/javascript">
 jQuery(document).ready(function($) {
-    octopus.service.bootExerciseForm()
+
+    function exerciseForm(frag) {
+        $("#exercise-form-container").html(frag);
+        octopus.service.bootExerciseForm()
+    }
+
+    octopus.fragments.frag({
+        id: "exercise-form",
+        callback: exerciseForm
+    });
+
 })
 </script>
 {% endblock%}
