--- a/service/templates/_exercise_form.html
+++ b/service/templates/_exercise_form.html
@@ -149,13 +149,13 @@
                     <div id="resistance_0" class="repeatable_container">
                         <div class="row"><div class="col-md-12">
                             <div class="form-group">
-                                <label for="resistance_level-0-name" class="col-sm-2 control-label sr-only">Show user</label>
+                                <label for="resistance_levels-0-name" class="col-sm-2 control-label sr-only">Show user</label>
                                 <div class="col-sm-3">
-                                     <input type="text" class="form-control resisted-conditional" name="resistance_level-0-name" id="resistance_level-0-name" placeholder="Show user" disabled>
+                                     <input type="text" class="form-control resisted-conditional" name="resistance_levels-0-name" id="resistance_levels-0-name" placeholder="Show user" disabled>
                                 </div>
-                                <label for="resistance_level-0-value" class="col-sm-2 control-label sr-only">Store value</label>
+                                <label for="resistance_levels-0-value" class="col-sm-2 control-label sr-only">Store value</label>
                                 <div class="col-sm-3">
-                                    <input type="text" class="form-control resisted-conditional" name="resistance_level-0-value" id="resistance_level-0-value" placeholder="Store value" disabled>
+                                    <input type="text" class="form-control resisted-conditional" name="resistance_levels-0-value" id="resistance_levels-0-value" placeholder="Store value" disabled>
                                 </div>
                                 <div class="col-sm-2">
                                     <div class="input-group">
