--- a/service/templates/exercise.html
+++ b/service/templates/exercise.html
@@ -10,17 +10,17 @@
 
 
 {% block extra_js_bottom %}
+
+<script type="text/javascript">
+var exercise_id = {% if exercise_id %}"{{ exercise_id }}"{% else %}undefined{% endif %};
+</script>
+
 <script type="text/javascript">
 jQuery(document).ready(function($) {
 
-    function exerciseForm(frag) {
-        $("#exercise-form-container").html(frag);
-        octopus.service.bootExerciseForm()
-    }
-
-    octopus.fragments.frag({
-        id: "exercise-form",
-        callback: exerciseForm
+    octopus.service.exerciseForm({
+        selector : "#exercise-form-container",
+        exercise_id : exercise_id
     });
 
 })
