--- a/service/templates/header.html
+++ b/service/templates/header.html
@@ -4,9 +4,10 @@
     <div class="content" id="navigation">
 
         <div class="navbar-nav" id="main-nav">
-                <a class="navbar-brand" href="/">Hench Station Zero</a>
+                <a class="navbar-brand" href="{{ url_for('root') }}">Hench Station Zero</a>
                 <ul class="nav navbar-nav" id="main-nav-admin-menu" style="margin-bottom: 10px">
-                    <li><a href="/">define exercise</a></li>
+                    <li><a href="{{ url_for('exercise') }}">define exercise</a></li>
+                    <li><a href="{{ url_for('exercises') }}">exercises</a></li>
                 </ul>
         </div>
         
