updated search interface with correct new facets and edit button

--- a/service/templates/_exercise_form.html
+++ b/service/templates/_exercise_form.html
@@ -41,9 +41,9 @@
                     <label for="classes" class="col-sm-4 control-label">Exercise Type(s)&nbsp;<span class="required">*</span></label>
                     <div class="col-sm-8">
                         <select name="classes" id="classes" class="form-control" multiple data-parsley-required="true">
-                            <option value="cardio">Cardio</option>
-                            <option value="weights">Weights</option>
-                            <option value="bodyweight">Bodyweight</option>
+                            <option value="Cardio">Cardio</option>
+                            <option value="Weights">Weights</option>
+                            <option value="Bodyweight">Bodyweight</option>
                         </select>
                     </div>
                 </div>
@@ -51,9 +51,9 @@
                     <label for="movement" class="col-sm-4 control-label">Movement(s)</label>
                     <div class="col-sm-8">
                         <select name="movement" id="movement" class="form-control" multiple>
-                            <option value="cardio">Push</option>
-                            <option value="weights">Pull</option>
-                            <option value="bodyweight">Rotation</option>
+                            <option value="Push">Push</option>
+                            <option value="Pull">Pull</option>
+                            <option value="Rotation">Rotation</option>
                         </select>
                     </div>
                 </div>
@@ -61,16 +61,16 @@
                     <label for="main_muscles" class="col-sm-4 control-label">Main Muscle(s)&nbsp;<span class="required">*</span></label>
                     <div class="col-sm-8">
                         <select name="main_muscles" id="main_muscles" class="form-control" multiple data-parsley-required="true">
-                            <option value="biceps">Biceps</option>
-                            <option value="triceps">Triceps</option>
-                            <option value="upper_abs">Abdominals</option>
-                            <option value="delt">Deltoid</option>
-                            <option value="calf">Calf</option>
-                            <option value="glute">Glute</option>
-                            <option value="hamstrings">Hamstrings</option>
-                            <option value="quads">Quads</option>
-                            <option value="forearms">Forearms</option>
-                            <option value="traps">Traps</option>
+                            <option value="Biceps">Biceps</option>
+                            <option value="Triceps">Triceps</option>
+                            <option value="Abdominals">Abdominals</option>
+                            <option value="Deltoid">Deltoid</option>
+                            <option value="Calf">Calf</option>
+                            <option value="Glute">Glute</option>
+                            <option value="Hamstrings">Hamstrings</option>
+                            <option value="Quads">Quads</option>
+                            <option value="Forearms">Forearms</option>
+                            <option value="Traps">Traps</option>
                         </select>
                     </div>
                 </div>
@@ -78,8 +78,8 @@
                     <label for="targeted_muscles" class="col-sm-4 control-label">Targeted Muscle(s)</label>
                     <div class="col-sm-8">
                         <select name="targeted_muscles" id="targeted_muscles" class="form-control" multiple>
-                            <option value="outer_bicep">Outer Bicep</option>
-                            <option value="inner_bicep">Inner Bicep</option>
+                            <option value="Outer Bicep">Outer Bicep</option>
+                            <option value="Inner Bicep">Inner Bicep</option>
                         </select>
                     </div>
                 </div>
